{
    "name": "DefaultInputActions",
    "maps": [
        {
            "name": "DebugInputMap",
            "id": "d445fd08-197f-4303-b42b-063437a0a2c7",
            "actions": [
                {
                    "name": "Restart",
                    "type": "Button",
                    "id": "faee7550-a08a-4348-b913-e341d5319458",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "64a6cf1b-30f3-468c-91fd-70e083635825",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlatformInputMap",
            "id": "f942dffe-e190-4448-aa62-ffd9c134c480",
            "actions": [
                {
                    "name": "SpawnBall",
                    "type": "Button",
                    "id": "f3e44e17-ef20-4a7b-8b64-1606e986ee76",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test",
                    "type": "Button",
                    "id": "861370f3-e5b5-4bcb-b418-94ac1c7ea5c9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a0c8dc9e-76fa-4b8d-93ea-8e286c446649",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpawnBall",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bc20916a-df76-4ef2-b669-280a32b0de95",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Test",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}